--- a/index.html
+++ b/index.html
@@ -276,6 +276,53 @@
             font-size: 0.95rem;
         }
 
+        .name-input-box select {
+            padding: 10px 40px 10px 16px;
+            width: 80%;
+            max-width: 280px;
+            border-radius: 999px;
+            border: 1px solid #d7ccc8;
+            background-color: #fff;
+            font-size: 0.95rem;
+            text-align: center;
+            outline: none;
+            cursor: pointer;
+
+            /* 기본 브라우저 화살표 없애기 */
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+
+            /* 살짝 그림자 */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.12);
+        }
+
+        /* 선택박스 감싸는 박스에 화살표 아이콘처럼 보이게 */
+        .name-input-box {
+            text-align: center;
+            margin-top: 24px;
+            position: relative;
+        }
+
+        /* 드롭다운 화살표 느낌 */
+        .name-input-box::after {
+            content: "▾";
+            position: absolute;
+            right: 50%;
+            transform: translateX(120%);
+            top: 50%;
+            translate: 0 -50%;
+            font-size: 0.9rem;
+            color: #888;
+            pointer-events: none;
+        }
+
+        /* 포커스됐을 때 테두리 색 강조 */
+        .name-input-box select:focus {
+            border-color: #1b5e20;
+            box-shadow: 0 0 0 2px rgba(27, 94, 32, 0.2);
+        }
+
         .start-btn {
             margin-top: 14px;
             border: none;
