--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             <div class="question-box">
                 <div class="question-number">QUESTION 1</div>
                 <div class="question-text">
-                    청년부 중에서 가장 예쁜 누나/이모는 누구일까요? 😉
+                    보기 중에서 가장 예쁜 누나/이모는 누구일까요?^^
                 </div>
 
                 <div class="options-grid">
