--- a/index.html
+++ b/index.html
@@ -610,14 +610,13 @@
 </div>
 
 <script>
-    // 이름 & 말씀 매핑 (나중에 각자 말씀으로 자유롭게 수정 가능)
     const verseMap = {
         "로이": {
-            ref: "요한복음 3:16",
+            ref: "사도행전 1:8",
             text:
-                "하나님이 세상을 이처럼 사랑하사 독생자를 주셨으니<br />" +
-                "이는 저를 믿는 자마다 멸망치 않고<br />" +
-                "영생을 얻게 하려 하심이니라"
+                "오직 성령이 너희에게 임하시면 너희가 권능을 받고<br />" +
+                "예루살렘과 온 유대와 사마리아와 땅 끝까지 이르러<br />" +
+                "내 증인이 되리라 하시니라"
         },
         "이레": {
             ref: "요한복음 3:16",
