Update 소영, 채원 verse

--- a/index.html
+++ b/index.html
@@ -653,18 +653,20 @@
                 "영생을 얻게 하려 하심이니라"
         },
         "채원": {
-            ref: "요한복음 3:16",
+            ref: "민수기 6:24-26",
             text:
-                "하나님이 세상을 이처럼 사랑하사 독생자를 주셨으니<br />" +
-                "이는 저를 믿는 자마다 멸망치 않고<br />" +
-                "영생을 얻게 하려 하심이니라"
+                "여호와는 네게 복을 주시고 너를 지키기를 원하며<br />" +
+                "여호와는 그의 얼굴을 네게 비추사 은혜 베푸시기를 원하며<br />" +
+                "여호와는 그 얼굴을 네게로 향하여 드사 <br />" +
+                "평강 주시기를 원하노라 할지니라 하라"
         },
         "소영": {
-            ref: "요한복음 3:16",
+            ref: "빌립보서 4:6-7",
             text:
-                "하나님이 세상을 이처럼 사랑하사 독생자를 주셨으니<br />" +
-                "이는 저를 믿는 자마다 멸망치 않고<br />" +
-                "영생을 얻게 하려 하심이니라"
+                "아무 것도 염려하지 말고 다만 모든 일에 기도와 간구로,<br />" +
+                "너희 구할 것을 감사함으로 하나님께 아뢰라<br />" +
+                "그리하면 모든 지각에 뛰어난 하나님의 평강이<br />" +
+                "그리스도 예수 안에서 너희 마음과 생각을 지키시리라."
         },
         "승현": {
             ref: "요한복음 3:16",
