changed verse 다은

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 "영생을 얻게 하려 하심이니라"
         },
         "아연": {
-            ref: "요한복음 3장 16절",
+            ref: "요한복음 3:16",
             text:
                 "하나님이 세상을 이처럼 사랑하사 독생자를 주셨으니<br />" +
                 "이는 저를 믿는 자마다 멸망치 않고<br />" +
@@ -646,11 +646,11 @@
                 "영생을 얻게 하려 하심이니라"
         },
         "다은": {
-            ref: "요한복음 3:16",
+            ref: "이사야 41:10",
             text:
-                "하나님이 세상을 이처럼 사랑하사 독생자를 주셨으니<br />" +
-                "이는 저를 믿는 자마다 멸망치 않고<br />" +
-                "영생을 얻게 하려 하심이니라"
+                "두려워하지말라 내가 너와 함께함이요,<br />" +
+                "놀라지말라 나는 네 하나님이 됨이라.<br />" +
+                "내가 너를 강하게 하리라,<br/>참으로 너를 도우리라."
         },
         "채원": {
             ref: "요한복음 3:16",
