--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
             ref: "요한복음 3:16",
             text:
                 "하나님이 세상을 이처럼 사랑하사 독생자를 주셨으니<br />" +
-                "이는 저를 믿는 자마다 멸망치 않고<br />" +
+                "이는 저를 믿는 자마다 멸망치 않고<br />" +원
                 "영생을 얻게 하려 하심이니라"
         }
     };
