--- a/index.html
+++ b/index.html
@@ -639,11 +639,11 @@
                 "나로 말미암지 않고는 아버지께로 올 자가 없느니라"
         },
         "재훈": {
-            ref: "요한복음 3:16",
+            ref: "에베소서 5:8",
             text:
-                "하나님이 세상을 이처럼 사랑하사 독생자를 주셨으니<br />" +
-                "이는 저를 믿는 자마다 멸망치 않고<br />" +
-                "영생을 얻게 하려 하심이니라"
+                "너희가 전에는 어둠이더니<br />" +
+                "이제는 주안에서 빛이라<br />" +
+                " 빛의 자녀들처럼 행하라"
         },
         "다은": {
             ref: "이사야 41:10",
